take a little right padding off preview boxes to prevent subheading wrapping onto two lines

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12434,7 +12434,7 @@ hr {
 #page-home .section--preview-xcore .section__content {
   margin-left: 1px;
   margin-right: 1px;
-  padding-right: 30px;
+  padding-right: 28px;
   padding-top: 45px;
 }
 
