--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -202,7 +202,7 @@
             .section__content {
                 margin-left: 1px;
                 margin-right: 1px;
-                padding-right: 30px;
+                padding-right: 28px;
                 padding-top: 45px;
             }
 
